// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders with large size and anonymous variant 1`] = `
<svg
  data-file-name="SvgAnonymous"
  height={56}
  width={56}
/>
`;

exports[`Avatar renders with large size and filled variant 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      role="presentation"
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNTYiIGhlaWdodD0iNTYiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    className="w-14 h-14 rounded-full"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Avatar renders with large size and not filled variant 1`] = `
<svg
  data-file-name="SvgNotFilled"
  height={56}
  width={56}
/>
`;

exports[`Avatar renders with medium size and anonymous variant 1`] = `
<svg
  data-file-name="SvgAnonymous"
  height={40}
  width={40}
/>
`;

exports[`Avatar renders with medium size and filled variant 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      role="presentation"
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAiIGhlaWdodD0iNDAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    className="w-10 h-10 rounded-full"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Avatar renders with medium size and not filled variant 1`] = `
<svg
  data-file-name="SvgNotFilled"
  height={40}
  width={40}
/>
`;

exports[`Avatar renders with small size and anonymous variant 1`] = `
<svg
  data-file-name="SvgAnonymous"
  height={32}
  width={32}
/>
`;

exports[`Avatar renders with small size and filled variant 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      role="presentation"
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMzIiIGhlaWdodD0iMzIiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    className="w-8 h-8 rounded-full"
    decoding="async"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Avatar renders with small size and not filled variant 1`] = `
<svg
  data-file-name="SvgNotFilled"
  height={32}
  width={32}
/>
`;
